--- a/MyRecipeApp/gradle/wrapper/gradle-wrapper.properties
+++ b/MyRecipeApp/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Jul 15 01:03:18 JST 2024
+#Sun Oct 22 12:03:14 CEST 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.2-bin.zip
