--- a/locationapp/gradle/wrapper/gradle-wrapper.properties
+++ b/locationapp/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed Jul 17 21:14:18 JST 2024
+#Wed Nov 01 09:07:27 CET 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.2-bin.zip
